tests/snapshots/fixtures_snapshot__fixtures__raw_data__principlesofeco__tax2_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "YEAR",
    "INC",
    "TAX"
  ],
  "row_count": 60,
  "rows": [
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 9.21500015258789
      },
      {
        "kind": "number",
        "value": 1.6430000066757202
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 2.046999931335449
      },
      {
        "kind": "number",
        "value": 0.4129999876022339
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 9.98900032043457
      },
      {
        "kind": "number",
        "value": 1.7519999742507935
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 8.321000099182129
      },
      {
        "kind": "number",
        "value": 1.4079999923706055
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 4.5879998207092285
      },
      {
        "kind": "number",
        "value": 0.8379999995231628
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 4.736000061035156
      },
      {
        "kind": "number",
        "value": 0.7480000257492065
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 3.5959999561309814
      },
      {
        "kind": "number",
        "value": 0.5770000219345093
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 4.829999923706055
      },
      {
        "kind": "number",
        "value": 0.7519999742507935
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 4.507999897003174
      },
      {
        "kind": "number",
        "value": 0.7609999775886536
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 7.50600004196167
      },
      {
        "kind": "number",
        "value": 1.3309999704360962
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 4.052000045776367
      },
      {
        "kind": "number",
        "value": 0.5479999780654907
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 6.014999866485596
      },
      {
        "kind": "number",
        "value": 1.121000051498413
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 7.775000095367432
      },
      {
        "kind": "number",
        "value": 1.315999984741211
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 3.1050000190734863
      },
      {
        "kind": "number",
        "value": 0.503000020980835
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 2.2149999141693115
      },
      {
        "kind": "number",
        "value": 0.5139999985694885
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 5.676000118255615
      },
      {
        "kind": "number",
        "value": 1.0570000410079956
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 5.553999900817871
      },
      {
        "kind": "number",
        "value": 0.9419999718666077
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 5.360000133514404
      },
      {
        "kind": "number",
        "value": 0.8029999732971191
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 10.394000053405762
      },
      {
        "kind": "number",
        "value": 1.9019999504089355
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 3.4730000495910645
      },
      {
        "kind": "number",
        "value": 0.5130000114440918
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 4.021999835968018
      },
      {
        "kind": "number",
        "value": 0.8679999709129333
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 6.11899995803833
      },
      {
        "kind": "number",
        "value": 1.0670000314712524
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 3.361999988555908
      },
      {
        "kind": "number",
        "value": 0.5590000152587891
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 7.203000068664551
      },
      {
        "kind": "number",
        "value": 1.3179999589920044
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 3.874000072479248
      },
      {
        "kind": "number",
        "value": 0.5799999833106995
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 7.258999824523926
      },
      {
        "kind": "number",
        "value": 1.1380000114440918
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 2.130000114440918
      },
      {
        "kind": "number",
        "value": 0.414000004529953
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 7.5279998779296875
      },
      {
        "kind": "number",
        "value": 1.3309999704360962
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 9.57800006866455
      },
      {
        "kind": "number",
        "value": 1.6619999408721924
      }
    ],
    [
      {
        "kind": "number",
        "value": 1988.0
      },
      {
        "kind": "number",
        "value": 2.015000104904175
      },
      {
        "kind": "number",
        "value": 0.35100001096725464
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 9.517999649047852
      },
      {
        "kind": "number",
        "value": 2.125
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 2.068000078201294
      },
      {
        "kind": "number",
        "value": 0.5649999976158142
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 9.991999626159668
      },
      {
        "kind": "number",
        "value": 2.2209999561309814
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 8.515000343322754
      },
      {
        "kind": "number",
        "value": 1.9049999713897705
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 4.388999938964844
      },
      {
        "kind": "number",
        "value": 0.9430000185966492
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 5.014999866485596
      },
      {
        "kind": "number",
        "value": 1.0509999990463257
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 3.811000108718872
      },
      {
        "kind": "number",
        "value": 0.8190000057220459
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 4.939000129699707
      },
      {
        "kind": "number",
        "value": 1.0149999856948853
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 4.539000034332275
      },
      {
        "kind": "number",
        "value": 1.0959999561309814
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 7.806000232696533
      },
      {
        "kind": "number",
        "value": 1.6540000438690186
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 4.583000183105469
      },
      {
        "kind": "number",
        "value": 0.8360000252723694
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 6.34499979019165
      },
      {
        "kind": "number",
        "value": 1.6019999980926514
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 8.22700023651123
      },
      {
        "kind": "number",
        "value": 1.8769999742507935
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 3.128999948501587
      },
      {
        "kind": "number",
        "value": 0.6980000138282776
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 2.690999984741211
      },
      {
        "kind": "number",
        "value": 0.2460000067949295
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 6.014999866485596
      },
      {
        "kind": "number",
        "value": 1.1460000276565552
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 5.702000141143799
      },
      {
        "kind": "number",
        "value": 1.2209999561309814
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 5.150000095367432
      },
      {
        "kind": "number",
        "value": 0.9200000166893005
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 10.579000473022461
      },
      {
        "kind": "number",
        "value": 2.1500000953674316
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 3.3410000801086426
      },
      {
        "kind": "number",
        "value": 0.5699999928474426
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 4.400000095367432
      },
      {
        "kind": "number",
        "value": 0.9169999957084656
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 6.682000160217285
      },
      {
        "kind": "number",
        "value": 1.156999945640564
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 3.486999988555908
      },
      {
        "kind": "number",
        "value": 0.6779999732971191
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 7.557000160217285
      },
      {
        "kind": "number",
        "value": 1.6369999647140503
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 3.928999900817871
      },
      {
        "kind": "number",
        "value": 0.5149999856948853
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 7.636000156402588
      },
      {
        "kind": "number",
        "value": 1.7209999561309814
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 2.1689999103546143
      },
      {
        "kind": "number",
        "value": 0.43299999833106995
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 7.861999988555908
      },
      {
        "kind": "number",
        "value": 1.4609999656677246
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 9.996999740600586
      },
      {
        "kind": "number",
        "value": 2.1659998893737793
      }
    ],
    [
      {
        "kind": "number",
        "value": 1989.0
      },
      {
        "kind": "number",
        "value": 2.259000062942505
      },
      {
        "kind": "number",
        "value": 0.44699999690055847
      }
    ]
  ]
}
