tests/snapshots/fixtures_snapshot__fixtures__raw_data__principlesofeco__texas_sas7bdat.snap
---
source: tests/fixtures_snapshot.rs
expression: snapshot.clone()
---
{
  "columns": [
    "RPO",
    "TXNAG",
    "USNAG"
  ],
  "row_count": 57,
  "rows": [
    [
      {
        "kind": "number",
        "value": 13.388299942016602
      },
      {
        "kind": "number",
        "value": 4294.330078125
      },
      {
        "kind": "number",
        "value": 78128.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 13.639699935913086
      },
      {
        "kind": "number",
        "value": 4350.60009765625
      },
      {
        "kind": "number",
        "value": 78354.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 13.129899978637695
      },
      {
        "kind": "number",
        "value": 4399.39990234375
      },
      {
        "kind": "number",
        "value": 78515.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 13.096699714660645
      },
      {
        "kind": "number",
        "value": 4395.740234375
      },
      {
        "kind": "number",
        "value": 78121.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.126999855041504
      },
      {
        "kind": "number",
        "value": 4395.259765625
      },
      {
        "kind": "number",
        "value": 76775.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.166199684143066
      },
      {
        "kind": "number",
        "value": 4415.85986328125
      },
      {
        "kind": "number",
        "value": 76401.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.091099739074707
      },
      {
        "kind": "number",
        "value": 4488.60009765625
      },
      {
        "kind": "number",
        "value": 76963.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.221099853515625
      },
      {
        "kind": "number",
        "value": 4551.60009765625
      },
      {
        "kind": "number",
        "value": 77646.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.1983003616333
      },
      {
        "kind": "number",
        "value": 4605.7998046875
      },
      {
        "kind": "number",
        "value": 78586.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 13.793000221252441
      },
      {
        "kind": "number",
        "value": 4670.22021484375
      },
      {
        "kind": "number",
        "value": 79198.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 13.827500343322754
      },
      {
        "kind": "number",
        "value": 4708.97021484375
      },
      {
        "kind": "number",
        "value": 79639.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.260499954223633
      },
      {
        "kind": "number",
        "value": 4750.1298828125
      },
      {
        "kind": "number",
        "value": 80093.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.12600040435791
      },
      {
        "kind": "number",
        "value": 4809.02978515625
      },
      {
        "kind": "number",
        "value": 80846.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 13.829899787902832
      },
      {
        "kind": "number",
        "value": 4870.2001953125
      },
      {
        "kind": "number",
        "value": 81997.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.090900421142578
      },
      {
        "kind": "number",
        "value": 4926.47998046875
      },
      {
        "kind": "number",
        "value": 83052.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.648200035095215
      },
      {
        "kind": "number",
        "value": 5021.22021484375
      },
      {
        "kind": "number",
        "value": 83977.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.711000442504883
      },
      {
        "kind": "number",
        "value": 5122.08984375
      },
      {
        "kind": "number",
        "value": 84872.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.84160041809082
      },
      {
        "kind": "number",
        "value": 5229.4599609375
      },
      {
        "kind": "number",
        "value": 86431.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.586299896240234
      },
      {
        "kind": "number",
        "value": 5321.43017578125
      },
      {
        "kind": "number",
        "value": 87283.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.625100135803223
      },
      {
        "kind": "number",
        "value": 5398.5498046875
      },
      {
        "kind": "number",
        "value": 88185.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.814200401306152
      },
      {
        "kind": "number",
        "value": 5491.509765625
      },
      {
        "kind": "number",
        "value": 89024.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 16.147199630737305
      },
      {
        "kind": "number",
        "value": 5567.35009765625
      },
      {
        "kind": "number",
        "value": 89670.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 19.47960090637207
      },
      {
        "kind": "number",
        "value": 5638.81005859375
      },
      {
        "kind": "number",
        "value": 90134.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 21.996700286865234
      },
      {
        "kind": "number",
        "value": 5723.89990234375
      },
      {
        "kind": "number",
        "value": 90466.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 25.43090057373047
      },
      {
        "kind": "number",
        "value": 5766.580078125
      },
      {
        "kind": "number",
        "value": 90881.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 27.960399627685547
      },
      {
        "kind": "number",
        "value": 5806.43017578125
      },
      {
        "kind": "number",
        "value": 90316.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 29.041200637817383
      },
      {
        "kind": "number",
        "value": 5879.419921875
      },
      {
        "kind": "number",
        "value": 89887.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 30.4242000579834
      },
      {
        "kind": "number",
        "value": 5976.009765625
      },
      {
        "kind": "number",
        "value": 90584.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 38.66360092163086
      },
      {
        "kind": "number",
        "value": 6042.1201171875
      },
      {
        "kind": "number",
        "value": 91000.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 37.69300079345703
      },
      {
        "kind": "number",
        "value": 6140.10009765625
      },
      {
        "kind": "number",
        "value": 91218.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 35.46590042114258
      },
      {
        "kind": "number",
        "value": 6237.06982421875
      },
      {
        "kind": "number",
        "value": 91412.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 34.61819839477539
      },
      {
        "kind": "number",
        "value": 6309.02978515625
      },
      {
        "kind": "number",
        "value": 91010.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 32.99489974975586
      },
      {
        "kind": "number",
        "value": 6337.85009765625
      },
      {
        "kind": "number",
        "value": 90349.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 30.67340087890625
      },
      {
        "kind": "number",
        "value": 6307.5400390625
      },
      {
        "kind": "number",
        "value": 89934.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 30.6018009185791
      },
      {
        "kind": "number",
        "value": 6247.080078125
      },
      {
        "kind": "number",
        "value": 89276.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 30.732500076293945
      },
      {
        "kind": "number",
        "value": 6162.97021484375
      },
      {
        "kind": "number",
        "value": 88717.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 28.752099990844727
      },
      {
        "kind": "number",
        "value": 6149.52978515625
      },
      {
        "kind": "number",
        "value": 88814.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 27.67340087890625
      },
      {
        "kind": "number",
        "value": 6148.009765625
      },
      {
        "kind": "number",
        "value": 89591.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 27.525299072265625
      },
      {
        "kind": "number",
        "value": 6211.89990234375
      },
      {
        "kind": "number",
        "value": 90561.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 27.288000106811523
      },
      {
        "kind": "number",
        "value": 6279.759765625
      },
      {
        "kind": "number",
        "value": 91786.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 26.966299057006836
      },
      {
        "kind": "number",
        "value": 6365.9599609375
      },
      {
        "kind": "number",
        "value": 93000.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 26.666900634765625
      },
      {
        "kind": "number",
        "value": 6475.18017578125
      },
      {
        "kind": "number",
        "value": 94064.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 26.45789909362793
      },
      {
        "kind": "number",
        "value": 6528.58984375
      },
      {
        "kind": "number",
        "value": 95021.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 25.85460090637207
      },
      {
        "kind": "number",
        "value": 6601.5498046875
      },
      {
        "kind": "number",
        "value": 95868.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 24.253400802612305
      },
      {
        "kind": "number",
        "value": 6622.16015625
      },
      {
        "kind": "number",
        "value": 96575.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 24.21179962158203
      },
      {
        "kind": "number",
        "value": 6669.7099609375
      },
      {
        "kind": "number",
        "value": 97246.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 23.798500061035156
      },
      {
        "kind": "number",
        "value": 6669.8701171875
      },
      {
        "kind": "number",
        "value": 97819.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 23.851900100708008
      },
      {
        "kind": "number",
        "value": 6683.22998046875
      },
      {
        "kind": "number",
        "value": 98420.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 18.229900360107422
      },
      {
        "kind": "number",
        "value": 6681.5498046875
      },
      {
        "kind": "number",
        "value": 98883.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 11.514599800109863
      },
      {
        "kind": "number",
        "value": 6581.14990234375
      },
      {
        "kind": "number",
        "value": 99189.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 10.764100074768066
      },
      {
        "kind": "number",
        "value": 6515.64013671875
      },
      {
        "kind": "number",
        "value": 99676.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 11.59119987487793
      },
      {
        "kind": "number",
        "value": 6478.8798828125
      },
      {
        "kind": "number",
        "value": 100347.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.249300003051758
      },
      {
        "kind": "number",
        "value": 6478.1298828125
      },
      {
        "kind": "number",
        "value": 101024.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 15.115699768066406
      },
      {
        "kind": "number",
        "value": 6471.4501953125
      },
      {
        "kind": "number",
        "value": 101841.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 16.088499069213867
      },
      {
        "kind": "number",
        "value": 6494.7001953125
      },
      {
        "kind": "number",
        "value": 102669.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 14.961799621582031
      },
      {
        "kind": "number",
        "value": 6552.2001953125
      },
      {
        "kind": "number",
        "value": 103683.0
      }
    ],
    [
      {
        "kind": "number",
        "value": 12.937199592590332
      },
      {
        "kind": "number",
        "value": 6545.1201171875
      },
      {
        "kind": "number",
        "value": 104670.0
      }
    ]
  ]
}
